--- a/style.css
+++ b/style.css
@@ -583,11 +583,55 @@ nav h1{
         left: 10px;
     }
     .Skillset{
-        top: 98%;
+        top: 93%;
         left:-30px;
         width: 100%;
     }
     .Education{
         left: -1%;
     }
+    .box1 img{
+        width: 90%;
+     }
+     .box2 img{
+        width: 90%;
+        margin-left: 6.5%;
+        margin-top: 30px;
+     }
+     .box3 img{
+        width: 88%;
+     }
+     .box4 img{
+        width: 90%;
+     }
+     .context1{
+        width: 90%;
+        
+     }
+     .context2{
+        width: 90%;
+        margin-left: 6.5%;
+     }
+     .context3{
+        width: 88%;
+        top:9%;
+        height:90%
+     }
+     .context4{
+        width: 90%;
+        margin-left: 6.5%;
+        height: 98%;
+     }
+     .context1 a{
+        display: none;
+     }
+     .context2 a{
+        display: none;
+     }
+     .context3 a{
+        display: none;
+     }
+     .context4 a{
+        display: none;
+     }
 }
